ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/bucket_typo.rs
use iac_macro::iac;

fn main() {
    iac! {
        bucke uniquename
    }
}
