ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/bucket_typo.stderr
error: only 'bucket' and 'lambda' resources are supported. Is this a typo for bucket?
 --> tests/fails/bucket_typo.rs:5:9
  |
5 |         bucke uniquename
  |         ^^^^^
